# volt-extensions

./: .gitignore  LICENSE  PR_DESCRIPTION.md  README.md  SET_UP_EXTENSION_REPO.md  registry.json
api/rust/: Cargo.toml  README.md
api/rust/src/: api.rs  lib.rs  registry.rs
api/typescript/: README.md  package.json  tsconfig.json
api/typescript/src/: index.ts  registry.ts  types.ts
community/: README.md
docs/: getting-started.md  plugin-api.md  publishing.md  rust-api.md  typescript-api.md
examples/: package.json
examples/calculator/: README.md  index.ts  types.ts
examples/calculator/components/calculator/: CalculatorView.css  CalculatorView.tsx
examples/calculator/converters/: dates.ts  math.ts  timezone.ts  units.ts
examples/calculator/parsers/: patterns.ts  queryParser.ts
examples/calculator/utils/: formatting.ts  history.ts
examples/password-generator/: PLAN.md  README.md  index.ts  manifest.json  types.ts
examples/password-generator/components/: PasswordView.css  PasswordView.tsx
examples/password-generator/parsers/: queryParser.ts
examples/password-generator/utils/: generator.ts  strength.ts  wordlist.ts
examples/websearch/: README.md  index.ts
scripts/: package-extension.js
templates/rust-plugin/: Cargo.toml  README.md
templates/rust-plugin/src/: lib.rs
templates/typescript-plugin/: README.md  package.json  tsconfig.json
templates/typescript-plugin/src/: index.ts
